--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 </nav>
 
 <div class="jumbotron">
-    <img src="IMG-20240705-WA0195.jpg" />
-  <h1 class="display-4">Hello akmal </h1>
+  <img src="1.jpg" style="border-radius 30℅"/>
+  <h1 class="display-4">Hello saya akmal </h1>
   <p class="lead">saya adalah manusia setangah ikan berkepala kambing dan saya termasuk golongan omnivora.</p>
   <hr class="my-4">
   <p>panggil saya pasti saya nengok</p>
